--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,49 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import logo from "../assets/JuhaMikael-Logo.svg";
+import "../styles/globals.css";
+import Button from "../components/Button.astro";
+import buyMeCoffee from "../assets/bmc-button.svg";
+import { Icon } from "astro-icon";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<Layout>
+  <main class="flex flex-col text-white font-bold">
+    <img src={logo} class="w-64" />
+    <div class="mt-8 text-3xl font-bold">
+      Website.ID <span class="italic">(WIP)</span>
+    </div>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+    <div class="mt-3">Actually coming soon!</div>
+    <section class="flex flex-row space-x-4 scale-75">
+      <Button
+        type="back-button"
+        href="https://www.juhamikael.info/"
+        text="Back"
+        hasIcon={true}
+        iconName="sharp-arrow-back-ios-new"
+        iconPack="ic"
+      />
+      <Button
+        type="image-button"
+        imgPath={buyMeCoffee}
+        href="https://www.buymeacoffee.com/juhamikael"
+      />
+    </section>
+    <a
+      class="mt-3 text-xl font-bold hover:text-yellow-400 flex"
+      href="https://open.spotify.com/artist/2heJl7jzvTYoHyR5xwSSea?si=ExUFqyUOSfaRkky9YfvptQ"
+      target="_blank"
+      >Meanwhile check out my music on Spotify!
+      <Icon name="sharp-open-in-new" pack="ic" class="inline-block ml-4 w-5" />
+    </a>
+
+    <a
+      class="mt-3 text-xl font-bold hover:text-yellow-400 flex"
+      href="https://jemi.so/juhamikaelmusic"
+      target="_blank"
+      >Link Tree
+      <Icon name="sharp-open-in-new" pack="ic" class="inline-block ml-4 w-5" />
+    </a>
+  </main>
+</Layout>
