--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,49 +1,137 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import profilePic from "../assets/profile-pic.png";
 import logo from "../assets/JuhaMikael-Logo.svg";
 import "../styles/globals.css";
 import Button from "../components/Button.astro";
 import buyMeCoffee from "../assets/bmc-button.svg";
-import { Icon } from "astro-icon";
+import Tree from "../components/Tree";
+import CustomButton from "../components/CustomButton";
+import SocialMedia from "../components/SocialMedia.astro";
 ---
 
 <Layout>
-  <main class="flex flex-col text-white font-bold">
-    <img src={logo} class="w-64" />
-    <div class="mt-8 text-3xl font-bold">
-      Website.ID <span class="italic">(WIP)</span>
-    </div>
-
-    <div class="mt-3">Actually coming soon!</div>
-    <section class="flex flex-row space-x-4 scale-75">
-      <Button
-        type="back-button"
-        href="https://www.juhamikael.info/"
-        text="Back"
-        hasIcon={true}
-        iconName="sharp-arrow-back-ios-new"
-        iconPack="ic"
-      />
-      <Button
-        type="image-button"
-        imgPath={buyMeCoffee}
-        href="https://www.buymeacoffee.com/juhamikael"
-      />
+  <main
+    class="grid h-screen font-montserrat font-bold text-white lg:grid-cols-2"
+  >
+    <section class="mx-10">
+      <div class="flex justify-end">
+        <img src={profilePic} class="h-[550px] rounded-xl object-cover" />
+      </div>
     </section>
-    <a
-      class="mt-3 text-xl font-bold hover:text-yellow-400 flex"
-      href="https://open.spotify.com/artist/2heJl7jzvTYoHyR5xwSSea?si=ExUFqyUOSfaRkky9YfvptQ"
-      target="_blank"
-      >Meanwhile check out my music on Spotify!
-      <Icon name="sharp-open-in-new" pack="ic" class="inline-block ml-4 w-5" />
-    </a>
+    <section id="tree" class="">
+      <section class="mt-10">
+        <div class="flex justify-start">
+          <img src={logo} class="h-24 rounded-xl object-cover" />
+        </div>
+      </section>
 
-    <a
-      class="mt-3 text-xl font-bold hover:text-yellow-400 flex"
-      href="https://jemi.so/juhamikaelmusic"
-      target="_blank"
-      >Link Tree
-      <Icon name="sharp-open-in-new" pack="ic" class="inline-block ml-4 w-5" />
-    </a>
+      <section id="social-medias" class="mt-5 flex items-center gap-x-4">
+        <SocialMedia
+          iconName="instagram"
+          iconPack="simple-icons"
+          link="https://www.instagram.com/juhamikaell/"
+        />
+        <SocialMedia
+          iconName="spotify"
+          iconPack="simple-icons"
+          link="https://open.spotify.com/artist/2heJl7jzvTYoHyR5xwSSea?si=w15Co8_TS-WudI9KMG29Cw&nd=1"
+        />
+        <SocialMedia
+          iconName="facebook"
+          iconPack="simple-icons"
+          link="https://www.facebook.com/juhasmusic"
+        />
+        <SocialMedia
+          iconName="linkedin"
+          iconPack="simple-icons"
+          link="https://www.linkedin.com/in/juha-savikko/"
+        />
+        <Button
+          type="image-button"
+          imgPath={buyMeCoffee}
+          href="https://www.buymeacoffee.com/juhamikael"
+        />
+      </section>
+      <section class="mt-8 flex flex-col">
+        <div class="text-3xl">Music</div>
+        <Tree
+          artistProfiles={["Juha Mikael", "Juha", "Visioc"]}
+          link={[
+            "https://open.spotify.com/artist/2heJl7jzvTYoHyR5xwSSea?si=v8SkUoBcTVKav4SO0FM_TA",
+            "https://open.spotify.com/track/6rm9DvkBN2sL7seMuxaGJO?si=aa899b2155804972",
+            "https://open.spotify.com/artist/7Da1EQvDO77V9bAZwqYGcv?si=pWmAgCbrTFK2fg-BKYgRIQ",
+          ]}
+          icon="spotify"
+          notificationText={"I have changed my artist name a few times. So my music is spread out on different artist accounts."}
+          platform="Spotify"
+          client:load
+        />
+        <Tree
+          artistProfiles={[
+            "Juha Mikael",
+            "Juha Mikael Releases",
+            "Juha Mikael ID's",
+          ]}
+          link={[
+            "https://soundcloud.com/juhasmusic",
+            "https://soundcloud.com/juhamikaelbeats",
+            "https://soundcloud.com/visioc",
+          ]}
+          icon="soundcloud"
+          notificationText={"My main account Juha Mikael is full. So I have created a few more accounts and have spread my music on them."}
+          platform="Soundcloud"
+          client:load
+        />
+
+        <Tree
+          artistProfiles={["Juha Mikael"]}
+          link={["https://soundcloud.com/juhasmusic"]}
+          icon="youtube"
+          platform="Youtube"
+          client:load
+        />
+        <CustomButton
+          text="Join my Discord server"
+          link="https://discord.gg/cxp7EKw53w"
+          icon="discord"
+          client:load
+        />
+        <CustomButton
+          text="Check community Revived."
+          link="https://revived.tv/"
+          icon="revived"
+          client:load
+        />
+      </section>
+
+      <section class="flex flex-col">
+        <div class="mt-10 text-3xl">Downloads</div>
+        <CustomButton
+          text="Free Downloads"
+          link="https://www.dropbox.com/sh/yig5o9kvw2bzcov/AAAeZQPXGZcoRGbqDN_NoPjha?dl=0"
+          icon="music"
+          client:load
+        />
+
+        <CustomButton
+          text="Templates on Sale"
+          link="https://juhamikaelmusic.gumroad.com/"
+          icon="music"
+          client:load
+        />
+      </section>
+
+      <section class="flex">
+        <Button
+          type="back-button"
+          href="https://www.juhamikael.info/"
+          text="Back"
+          hasIcon={true}
+          iconName="sharp-arrow-back-ios-new"
+          iconPack="ic"
+        />
+      </section>
+    </section>
   </main>
 </Layout>
