--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,25 @@ main {
 .move-icon:is(:hover, :focus-within) {
   transform: translateX(0.6rem) scale(1.35);
 }
+
+.spotify-container {
+  position: relative;
+  padding-bottom: 60%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+.spotify-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@media screen and (max-width: 767px) {
+  .spotify-container {
+    padding-bottom: 50%;
+  }
+}
