Split index.astro to components for easier maintain + new components and configuration

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,11 +7,9 @@ const about = await getCollection("about");
 <>
   {
     about.map((data) => (
-      <div class="font-montserrat">
-        <h2 class=" mx-2 my-2 text-3xl font-bold text-white">
-          {data.data.title}
-        </h2>
-        <div class="prose prose-sm dark:prose-invert prose-p:mt-5 prose-a:font-bold prose-a:text-custom-yellow my-4 mx-2 w-[400px] font-normal text-white">
+      <div class="font-montserrat w-2/3 p-6 ">
+        <h2 class=" my-2 text-3xl font-bold text-white ">{data.data.title}</h2>
+        <div class="prose prose-sm dark:prose-invert prose-p:mt-5 prose-a:font-bold prose-a:text-yellow-600 my-4 w-80 font-normal text-white lg:w-full">
           <Markdown>{data.body}</Markdown>
         </div>
       </div>
