--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -25,7 +25,7 @@ const { type, imgPath, text, href, hasIcon, iconName, iconPack } = Astro.props;
 {
   type === "back-button" && (
     <a
-      class="scale-card mt-5 flex h-10 w-36 cursor-pointer items-center justify-center rounded-lg bg-custom-yellow text-primary"
+      class="scale-card text-primary mt-5 flex h-10 w-36 cursor-pointer items-center justify-center rounded-lg bg-yellow-600"
       href={href}
     >
       <span class="mr-3 flex flex-row place-content-center place-items-center ">
